adding link to ui page inside node info

--- a/nodes/ui_button_row.html
+++ b/nodes/ui_button_row.html
@@ -195,4 +195,5 @@
     An input message with a string payload will toggle the state of that specific button.<br>
     An input message with an object payload (ex: <code>{alarm: true, play: false}</code>) will
     set the states for those buttons (alarm/play) and any other buttons will be left as they were.</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
