--- a/nodes/ui_chart.html
+++ b/nodes/ui_chart.html
@@ -70,4 +70,6 @@
     value on each input message.<br>
     The first ouput contains the chart state that can be persisted if needed. The second output 
     sends a "restore" message that can be used to restore the state of the chart.</p>
+
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
