--- a/nodes/ui_gauge.html
+++ b/nodes/ui_gauge.html
@@ -50,5 +50,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="ui_gauge">
-    <p>TODO</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
