--- a/nodes/ui_numeric.html
+++ b/nodes/ui_numeric.html
@@ -63,4 +63,5 @@
     The <b>Template</b> field can be used to change the displayed format. For example, a template of <b>{{value}} %</b>
     with a value of <b>23</b> will show <b>23 %</b> on the user interface. The <b>Template</b> field can contain
     HTML to format the output (eg: <code>&amp;deg;</code> will show the degree symbol).</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
