--- a/nodes/ui_radio_button.html
+++ b/nodes/ui_radio_button.html
@@ -156,4 +156,6 @@
     The specific payload is sent in a message once a radio button is selected. <br>
     If a topic is specified, it will be appended to the message.</p> <br>
     You can also set the input from Node-RED by sending the corresponding payload as a string.
+    <br>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
