--- a/nodes/ui_slider.html
+++ b/nodes/ui_slider.html
@@ -56,4 +56,5 @@
     Each input message will be converted to a number (<b>Min</b> will be used if conversion fails)
     and it will update the user interface. Also if the value changes, it will be passed to the output.<br>
     </p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
