--- a/nodes/ui_template.html
+++ b/nodes/ui_template.html
@@ -136,5 +136,5 @@
 &lt;/md-button&gt;</pre>
     Will display a button that when clicked will send a message with the payload <code>'Hello world'</code>.
     </p>
-    
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
