--- a/nodes/ui_button.html
+++ b/nodes/ui_button.html
@@ -48,4 +48,5 @@
     with the payload set to be the <b>Payload</b> field. If no payload is specified, 
     the node id is used. The topic field will be appended to the message
     as a <b>topic</b> property.</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
