--- a/nodes/ui_link.html
+++ b/nodes/ui_link.html
@@ -40,4 +40,5 @@
 <script type="text/x-red" data-help-name="ui_link">
     <p>Will add a link in the left side menu. The icon must be one of 
     (<a href="https://klarsys.github.io/angular-material-icons/" target="_blank">https://klarsys.github.io/angular-material-icons/</a>).</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
