--- a/nodes/ui_text.html
+++ b/nodes/ui_text.html
@@ -44,4 +44,5 @@
     the text based on the provided <b>Template</b>.<br>
     The <b>Template</b> field can be used to change the displayed format and can contain
     valid HTML (eg: <code>&amp;deg;</code> will show the degree symbol).</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
