--- a/nodes/ui_text_input.html
+++ b/nodes/ui_text_input.html
@@ -56,4 +56,5 @@
   The delay sets the amount of time in milliseconds before the output is sent.
   Text written by the user is sent in realtime as the <b>payload</b>. You can also
   set the text of the input field by sending in a <b>payload</b>.
+  <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
