--- a/nodes/ui_toast.html
+++ b/nodes/ui_toast.html
@@ -24,4 +24,5 @@
 <script type="text/x-red" data-help-name="ui_toast">
     <p>Shows a toast message on the user interface received as <code>msg.payload</code><br>
     If a <code>msg.topic</code> is available it will be used as the toast title.</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
 </script>
