--- a/nodes/legacy_ui_tab.html
+++ b/nodes/legacy_ui_tab.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('ui_tab',{
+    RED.nodes.registerType('legacy_ui_tab',{
         category: 'config',
         defaults: {
             name: {value: 'Home'},
@@ -10,7 +10,7 @@
     });
 </script>
 
-<script type="text/x-red" data-template-name="ui_tab">
+<script type="text/x-red" data-template-name="legacy_ui_tab">
     <div class="form-row">
         <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-config-input-name">
@@ -25,6 +25,6 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="ui_tab">
+<script type="text/x-red" data-help-name="legacy_ui_tab">
     <p>Tab</p>
 </script>
