--- a/nodes/legacy_ui_gauge.html
+++ b/nodes/legacy_ui_gauge.html
@@ -1,25 +1,26 @@
 <script type="text/javascript">
-    RED.nodes.registerType('ui_slider',{
+    RED.nodes.registerType('legacy_ui_gauge',{
         category: 'ui',
         color: '#a6bbcf',
         defaults: {
-            tab: {type: 'ui_tab', required: true},
-            name: {value: 'Slider'},
-            topic: {value: ''},
+            tab: {type: 'legacy_ui_tab', required: true},
+            name: {value: 'Gauge'},
             group: {value: ''},
             order: {value: 1, validate: RED.validators.number()},
+            format: {value: '{{value}}'},
             min: {value: 0, required: true, validate: RED.validators.number()},
             max: {value: 10, required: true, validate: RED.validators.number()},
         },
         inputs:1,
-        outputs:1,
-        icon: "ui_slider.png",
-        paletteLabel: 'slider',
-        label: function() { return this.name || 'slider'; }
+        outputs:0,
+        align: "right",
+        icon: "legacy_ui_gauge.png",
+        paletteLabel: 'gauge',
+        label: function() { return this.name || 'gauge'; }
     });
 </script>
 
-<script type="text/x-red" data-template-name="ui_slider">
+<script type="text/x-red" data-template-name="legacy_ui_gauge">
     <div class="form-row">
         <label for="node-input-tab"><i class="fa fa-table"></i> Tab</label>
         <input type="text" id="node-input-tab">
@@ -29,14 +30,14 @@
         <input type="text" id="node-input-name">
     </div>
     <div class="form-row">
-        <label for="node-input-topic"><i class="fa fa-tasks"></i> Topic</label>
-        <input type="text" id="node-input-topic">
-    </div>
-    <div class="form-row">
         <label for="node-input-group"><i class="fa fa-object-group"></i> Group</label>
         <input type="text" style="width: calc(70% - 132px)" id="node-input-group">
         <label for="node-input-order" style="text-align: right; width: 60px"><i class="fa fa-sort"></i> Order</label>
         <input type="text" style="width: 50px" id="node-input-order">
+    </div>
+    <div class="form-row">
+        <label for="node-input-format"><i class="fa fa-copy"></i> Template</label>
+        <input type="text" id="node-input-format">
     </div>
     <div class="form-row">
         <label for="node-input-min"><i class="fa fa-caret-left"></i> Min</label>
@@ -48,13 +49,6 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="ui_slider">
-    <p>Shows a slider on the user interface. The user can change it's value between
-    the limits (<b>Min/Max</b>). Each value change will generate a message with the value set
-    as <b>payload</b>.<br>
-    If a topic is specified, it will be appended to the message.<br>
-    Each input message will be converted to a number (<b>Min</b> will be used if conversion fails)
-    and it will update the user interface. Also if the value changes, it will be passed to the output.<br>
-    </p>
-    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
+<script type="text/x-red" data-help-name="legacy_ui_gauge">
+    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
 </script>
