--- a/nodes/legacy_ui_link.html
+++ b/nodes/legacy_ui_link.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('ui_link',{
+    RED.nodes.registerType('legacy_ui_link',{
         category: 'ui',
         color: '#a6bbcf',
         defaults: {
@@ -12,13 +12,13 @@
         inputs:0,
         outputs:0,
         align: "right",
-        icon: "ui_link.png",
+        icon: "legacy_ui_link.png",
         paletteLabel: 'link',
         label: function() { return this.name || 'link'; }
     });
 </script>
 
-<script type="text/x-red" data-template-name="ui_link">
+<script type="text/x-red" data-template-name="legacy_ui_link">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name">
@@ -37,8 +37,8 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="ui_link">
+<script type="text/x-red" data-help-name="legacy_ui_link">
     <p>Will add a link in the left side menu. The icon must be one of 
     (<a href="https://klarsys.github.io/angular-material-icons/" target="_blank">https://klarsys.github.io/angular-material-icons/</a>).</p>
-    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
 </script>
