--- a/nodes/legacy_ui_toast.html
+++ b/nodes/legacy_ui_toast.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('ui_toast', {
+    RED.nodes.registerType('legacy_ui_toast', {
         category: 'ui',
         color: '#a6bbcf',
         defaults: {
@@ -8,21 +8,21 @@
         inputs:1,
         outputs:0,
         align: "right",
-        icon: "ui_toast.png",
+        icon: "legacy_ui_toast.png",
         paletteLabel: 'show toast',
         label: function() { return this.name || "show toast"; }
     });
 </script>
 
-<script type="text/x-red" data-template-name="ui_toast">
+<script type="text/x-red" data-template-name="legacy_ui_toast">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="ui_toast">
+<script type="text/x-red" data-help-name="legacy_ui_toast">
     <p>Shows a toast message on the user interface received as <code>msg.payload</code><br>
     If a <code>msg.topic</code> is available it will be used as the toast title.</p>
-    <p>Access the dashboard at <a target="_blank" href="/red/ui/">/red/ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
 </script>
