update the url in html document

--- a/nodes/legacy_ui_gauge.html
+++ b/nodes/legacy_ui_gauge.html
@@ -50,5 +50,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="legacy_ui_gauge">
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
