--- a/nodes/legacy_ui_link.html
+++ b/nodes/legacy_ui_link.html
@@ -40,5 +40,5 @@
 <script type="text/x-red" data-help-name="legacy_ui_link">
     <p>Will add a link in the left side menu. The icon must be one of 
     (<a href="https://klarsys.github.io/angular-material-icons/" target="_blank">https://klarsys.github.io/angular-material-icons/</a>).</p>
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
