--- a/nodes/legacy_ui_radio_button.html
+++ b/nodes/legacy_ui_radio_button.html
@@ -157,5 +157,5 @@
     If a topic is specified, it will be appended to the message.</p> <br>
     You can also set the input from Node-RED by sending the corresponding payload as a string.
     <br>
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
