--- a/nodes/legacy_ui_slider.html
+++ b/nodes/legacy_ui_slider.html
@@ -56,5 +56,5 @@
     Each input message will be converted to a number (<b>Min</b> will be used if conversion fails)
     and it will update the user interface. Also if the value changes, it will be passed to the output.<br>
     </p>
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
