--- a/nodes/legacy_ui_switch.html
+++ b/nodes/legacy_ui_switch.html
@@ -52,5 +52,5 @@
     <p>Shows a switch on the user interface. Each change in the state of the switch will generate
     a message on the output with the specified <b>on/off</b> value.<br>
     If a topic is specified, it will be appended to the message.</p>
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
