--- a/nodes/legacy_ui_button_row.html
+++ b/nodes/legacy_ui_button_row.html
@@ -195,5 +195,5 @@
     An input message with a string payload will toggle the state of that specific button.<br>
     An input message with an object payload (ex: <code>{alarm: true, play: false}</code>) will
     set the states for those buttons (alarm/play) and any other buttons will be left as they were.</p>
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
