--- a/nodes/legacy_ui_chart.html
+++ b/nodes/legacy_ui_chart.html
@@ -71,5 +71,5 @@
     The first ouput contains the chart state that can be persisted if needed. The second output 
     sends a "restore" message that can be used to restore the state of the chart.</p>
 
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
