--- a/nodes/legacy_ui_text_input.html
+++ b/nodes/legacy_ui_text_input.html
@@ -56,5 +56,5 @@
   The delay sets the amount of time in milliseconds before the output is sent.
   Text written by the user is sent in realtime as the <b>payload</b>. You can also
   set the text of the input field by sending in a <b>payload</b>.
-  <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+  <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
