--- a/nodes/legacy_ui_toast.html
+++ b/nodes/legacy_ui_toast.html
@@ -24,5 +24,5 @@
 <script type="text/x-red" data-help-name="legacy_ui_toast">
     <p>Shows a toast message on the user interface received as <code>msg.payload</code><br>
     If a <code>msg.topic</code> is available it will be used as the toast title.</p>
-    <p>Access the dashboard at <a target="_blank" href="/red/legacy_ui/">/red/legacy_ui/</a>.</p>
+    <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
 </script>
