added in message about the deprecated node

--- a/nodes/legacy_ui_button.html
+++ b/nodes/legacy_ui_button.html
@@ -49,4 +49,5 @@
     the node id is used. The topic field will be appended to the message
     as a <b>topic</b> property.</p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
