--- a/nodes/legacy_ui_chart.html
+++ b/nodes/legacy_ui_chart.html
@@ -72,4 +72,5 @@
     sends a "restore" message that can be used to restore the state of the chart.</p>
 
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
