--- a/nodes/legacy_ui_gauge.html
+++ b/nodes/legacy_ui_gauge.html
@@ -51,4 +51,5 @@
 
 <script type="text/x-red" data-help-name="legacy_ui_gauge">
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
