--- a/nodes/legacy_ui_radio_button.html
+++ b/nodes/legacy_ui_radio_button.html
@@ -158,4 +158,5 @@
     You can also set the input from Node-RED by sending the corresponding payload as a string.
     <br>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
