--- a/nodes/legacy_ui_template.html
+++ b/nodes/legacy_ui_template.html
@@ -137,4 +137,5 @@
     Will display a button that when clicked will send a message with the payload <code>'Hello world'</code>.
     </p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
