--- a/nodes/legacy_ui_text_input.html
+++ b/nodes/legacy_ui_text_input.html
@@ -57,4 +57,5 @@
   Text written by the user is sent in realtime as the <b>payload</b>. You can also
   set the text of the input field by sending in a <b>payload</b>.
   <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+  <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
