--- a/nodes/legacy_ui_button_row.html
+++ b/nodes/legacy_ui_button_row.html
@@ -196,4 +196,5 @@
     An input message with an object payload (ex: <code>{alarm: true, play: false}</code>) will
     set the states for those buttons (alarm/play) and any other buttons will be left as they were.</p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
