--- a/nodes/legacy_ui_link.html
+++ b/nodes/legacy_ui_link.html
@@ -41,4 +41,5 @@
     <p>Will add a link in the left side menu. The icon must be one of 
     (<a href="https://klarsys.github.io/angular-material-icons/" target="_blank">https://klarsys.github.io/angular-material-icons/</a>).</p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
