--- a/nodes/legacy_ui_numeric.html
+++ b/nodes/legacy_ui_numeric.html
@@ -64,4 +64,5 @@
     with a value of <b>23</b> will show <b>23 %</b> on the user interface. The <b>Template</b> field can contain
     HTML to format the output (eg: <code>&amp;deg;</code> will show the degree symbol).</p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
