--- a/nodes/legacy_ui_slider.html
+++ b/nodes/legacy_ui_slider.html
@@ -57,4 +57,5 @@
     and it will update the user interface. Also if the value changes, it will be passed to the output.<br>
     </p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
