--- a/nodes/legacy_ui_switch.html
+++ b/nodes/legacy_ui_switch.html
@@ -53,4 +53,5 @@
     a message on the output with the specified <b>on/off</b> value.<br>
     If a topic is specified, it will be appended to the message.</p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
