--- a/nodes/legacy_ui_text.html
+++ b/nodes/legacy_ui_text.html
@@ -45,4 +45,5 @@
     The <b>Template</b> field can be used to change the displayed format and can contain
     valid HTML (eg: <code>&amp;deg;</code> will show the degree symbol).</p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
