--- a/nodes/legacy_ui_toast.html
+++ b/nodes/legacy_ui_toast.html
@@ -25,4 +25,5 @@
     <p>Shows a toast message on the user interface received as <code>msg.payload</code><br>
     If a <code>msg.topic</code> is available it will be used as the toast title.</p>
     <p>Access the dashboard at <a target="_blank" href="/legacy_ui/">/legacy_ui/</a>.</p>
+    <p><b><font color="red">This node is currently deprecated. Please use the new dashboard node. </font></b></p>
 </script>
